--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   },
   "homepage": "https://github.com/mritunjay7497/vidly-project-backend#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^13.1.0",
+    "mongoose": "^5.12.5",
     "nodemon": "^2.0.7"
   }
 }
