--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 dbuser = 'plusx0x07'
 dbpasswd = 'plusX0x07vidly'
 dbURI = 'mongodb+srv://plusx0x07:plusx0x07vidly@cluster0.8zlso.mongodb.net/vidlyMovie?retryWrites=true&w=majority'
+jwtSecret = 'k1gweDA3'
