--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
   },
   "homepage": "https://github.com/mritunjay7497/vidly-project-backend#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^13.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.5",
     "nodemon": "^2.0.7"
   }
